[package]
name = "day10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1"
parsers = { path = "../../parsers" }
aoc = { path = "../../aoc" }
arrayvec = "0.7"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benches"
harness = false
