[package]
name = "day17"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1"
parsers = { path = "../../parsers" }
aoc = { path = "../../aoc" }
next-gen = "0.1.1"
arrayvec = "0.7"
bytemuck = "1"
pathfinding = "4"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benches"
harness = false
